--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -83,7 +83,7 @@
         page="Personal Goals"
         patient="[[patient]]"
         home="[[home]]"
-        su-index-data={{suBasicInfo}}>
+        su-index-data="{{suBasicInfo}}">
       </su-header>
 
       <!--repeat each goal that currently is set-->
