updated care plan reports to save using days as entries with timechunks set to use for sub directories. report data lives in time chunk directories.

--- a/src/elements/admin-drawer/admin-drawer.html
+++ b/src/elements/admin-drawer/admin-drawer.html
@@ -145,6 +145,15 @@
             </paper-item>
           </a>
 
+          <a name="ad-reports" on-tap="close" href="/{{home}}/admin/ad-reports/{{admin}}" tabindex="-1">
+            <paper-item>
+              <paper-icon-item>
+                <iron-icon icon="icons:assessment" item-icon></iron-icon>
+                Reports
+              </paper-icon-item>
+            </paper-item>
+          </a>
+
           <a name="ad-support" on-tap="close" href="/{{home}}/admin/ad-support/{{admin}}" tabindex="-1">
             <paper-item>
               <paper-icon-item>
