--- a/src/pages/care-plan/su-monthly-reports/su-monthly-reports.html
+++ b/src/pages/care-plan/su-monthly-reports/su-monthly-reports.html
@@ -40,7 +40,6 @@
         margin:10px;
         padding:10px;
       }
-
     </style>
 
     <paper-card class="pageCard">
@@ -102,7 +101,7 @@
         <paper-textarea label="activities" value="{{monthlyRepData.activities}}"></paper-textarea>
         <paper-textarea label="locations" value="{{monthlyRepData.locations}}"></paper-textarea>
         <paper-textarea label="incidents" value="{{monthlyRepData.incidents}}"></paper-textarea>
-        <paper-textarea label="summary of shift" value="{{monthlyRepData.summaryOfChunk}}"></paper-textarea>
+        <paper-textarea label="Summary of Month" value="{{monthlyRepData.summaryOfChunk}}"></paper-textarea>
 
 
       </div>
