--- a/src/pages/care-plan/su-reports/su-reports.html
+++ b/src/pages/care-plan/su-reports/su-reports.html
@@ -40,7 +40,9 @@
         margin:10px;
         padding:10px;
       }
-
+      h2{
+        text-transform:capitalize;
+      }
     </style>
 
     <paper-card class="pageCard">
@@ -139,9 +141,9 @@
         chunkList:{
           type:Array,
           value:[
-            "Morning",
-            "Afternoon",
-            "Night"
+            "morning",
+            "afternoon",
+            "night"
           ]
         },
         dailyRepData:{
@@ -172,19 +174,19 @@
         //function to set the hours to get time chunks and calculate
         var hours=date.getHours();
         var altChunks=[
-          "Morning",
-          "Afternoon",
-          "Night"
+          "morning",
+          "afternoon",
+          "night"
         ];
         var timeChunk;
         if(hours>=4 && hours<12){
-          timeChunk="Morning";
+          timeChunk="morning";
         };
         if(hours>=12 && hours<20){
-          timeChunk="Afternoon";
+          timeChunk="afternoon";
         };
         if(hours>=20 || hours<4){
-          timeChunk="Night";
+          timeChunk="night";
         };
         //set the two calculated time values... used in db ops as well
         this.set("currentChunk",timeChunk);
