--- a/src/pages/admin/ad-reports/ad-reports.html
+++ b/src/pages/admin/ad-reports/ad-reports.html
@@ -8,35 +8,77 @@
       dimensions="{{dimensions}}">
     </media-queries>
 
-    <style include="common-styles">
+    <firebase-query
+      id="suListDB"
+      app-name="main"
+      path="/homes/[[home]]/patients/suIndex"
+      data="{{suListData}}">
+    </firebase-query>
 
+    <firebase-document
+      id="reportDB"
+      app-name="main"
+      path="/homes/[[home]]/reports/[[reportType]]/[[reportKey]]"
+      data="{{reportData}}">
+    </firebase-document>
+
+    <style include="common-styles">
+      :host{
+        --app-grid-columns:2;
+      }
+      #reportPages{
+        height:700px;
+      }
     </style>
 
     <paper-card class="pageCard">
 
       <admin-header
-        page="Settings"
+        page="Reports"
         icon="icons:assessment">
       </admin-header>
 
-      <div class="pageInnerCont padded">
-        <h1>Select a Report</h1>
-        <paper-dropdown-menu label="Report Types">
-          <paper-listbox class="dropdown-content">
-            <paper-item>Monthly Reports</paper-item>
-            <paper-item>MAPPA Reports</paper-item>
-            <paper-item>Management Reports</paper-item>
-            <paper-item>Quarterly Reports</paper-item>
-            <paper-item>Annual Reports</paper-item>
+      <div class="pageInnerCont">
+
+        <paper-dropdown-menu label="Select Report Type">
+          <paper-listbox
+            class="dropdown-content"
+            attr-for-selected="name"
+            selected="{{reportType}}">
+            <template is="dom-repeat" items="[[reportList]]" as="report">
+
+              <paper-item name="[[_convertToCamelCase(report)]]">[[report]]</paper-item>
+
+            </template>
           </paper-listbox>
         </paper-dropdown-menu>
 
+        <neon-animated-pages id="reportPages"
+          role="main"
+          selected="[[reportType]]"
+          attr-for-selected="name"
+          entry-animation="scale-up-animation"
+          exit-animation="scale-down-animation">
 
+          <monthly-manager-report
+            su-list-data="[[suListData]]"
+            name="monthlyManagerReport"
+            value="{{reportData}}">
+          </monthly-manager-report>
 
+          <quarterly-manager-report
+            su-list-data="[[suListData]]"
+            name="quarterlyManagerReport"
+            value="{{reportData}}">
+          </quarterly-manager-report>
 
+          <annual-manager-report
+            su-list-data="[[suListData]]"
+            name="annualManagerReport"
+            value="{{reportData}}">
+          </annual-manager-report>
 
-
-
+        </neon-animated-pages>
 
       </div>
 
@@ -54,7 +96,22 @@
       },
 
       properties:{
-
+        reportList:{
+          type:Array,
+          value:[
+            "Monthly Manager Report",
+            "Quarterly Manager Report",
+            "Annual Manager Report",
+          ]
+        },
+        reportType:{
+          type:String,
+          value:"monthlyManagerReport",
+          observer:"_selectedReportChanged"
+        },
+        reportKey:{
+          type:Number
+        }
       },
 
       observers:[
@@ -64,7 +121,67 @@
       behaviors:[
         Polymer.adminPagesAnimation,
         Polymer.adminResizeBehavior
-      ]
+      ],
+      startReport:function(){
+        this.$.createReport.open();
+      },
+      _selectedReportChanged:function(reportType){
+        console.log(reportType);
+        if(reportType.indexOf("monthly") != -1 ){
+          this.setMonthlyKey();
+        };
+        if(reportType.indexOf("quarterly") != -1 ){
+          this.setQuarterlyKey();
+        };
+        if(reportType.indexOf("annual") != -1 ){
+          this.setAnnualKey();
+        };
+      },
+      _convertToCamelCase:function(report){
+        var newString = report.replace(/ /g,"");
+        newString = newString.charAt(0).toLowerCase() + newString.slice(1);
+        return newString;
+      },
+      setMonthlyKey:function(){
+        var date = new Date();
+        var currentTime = date.getTime();
+        var minusSevenDays = currentTime - (1000 * 60 * 60 * 24 * 7);
+        var minusDate = new Date(minusSevenDays);
+        var months = minusDate.getMonth();
+        var years = minusDate.getFullYear();
+        var newDate = new Date(years, months);
+        var time = newDate.getTime();
+        this.set("reportKey", time);
+      },
+      setQuarterlyKey:function(){
+        var date = new Date();
+        var currentTime = date.getTime();
+        var minusSevenDays = currentTime - (1000 * 60 * 60 * 24 * 7);
+        var minusDate = new Date(minusSevenDays);
+        var months = minusDate.getMonth();
+        var realMonths = months+1;
+        var monthModulus = realMonths % 3;
+        var quarterStart = months-monthModulus;
+        if(quarterStart<0){
+          quarterStart+=11;
+          years--;
+        };
+        var years = minusDate.getFullYear();
+        var newDate = new Date(years, quarterStart);
+        var time = newDate.getTime();
+        this.set("reportKey", time);
+      },
+      setAnnualKey:function(){
+        var date = new Date();
+        var currentTime = date.getTime();
+        var minusSevenDays = currentTime - (1000 * 60 * 60 * 24 * 7);
+        var minusDate = new Date(minusSevenDays);
+        var years = minusDate.getFullYear();
+        var newDate = new Date(years, 0);
+        var time = newDate.getTime();
+        console.log(time);
+        this.set("reportKey", time);
+      }
     });
 
   </script>
