--- a/src/behaviors/default-resize-behavior.html
+++ b/src/behaviors/default-resize-behavior.html
@@ -12,35 +12,32 @@
       "screenChange(dimensions.*)"
     ],
     screenChange:function(dimensions){
-      //available queries= 640 900 750 1100
+      //available queries= <=767, <=1023, <=1365, <=1919
       if(this.page==="def-error"){
 
       };
       if(this.page==="def-home"){
-        //available queries= 640 900 750 1100
-        // orig widths= 1300, 1100, 900, 700, 500
 
-        //combined new widths= 1100 900 750 640
         var appGridColumns="5";
         var mainFabPosition="absolute";
         var mainFabTop="140px";
         var mainFabBottom="unset";
-        if(dimensions.base.query640){
+        if(dimensions.base.query767){
           appGridColumns="1";
           mainFabPosition="fixed";
           mainFabTop="unset";
           mainFabBottom="5%";
-        } else if(dimensions.base.query750){
+        } else if(dimensions.base.query1023){
           appGridColumns="2";
           mainFabPosition="absolute";
           mainFabTop="140px";
           mainFabBottom="unset";
-        } else if(dimensions.base.query900){
+        } else if(dimensions.base.query1365){
           appGridColumns="3";
           mainFabPosition="absolute";
           mainFabTop="140px";
           mainFabBottom="unset";
-        } else if(dimensions.base.query1100){
+        } else if(dimensions.base.query1919){
           appGridColumns="4";
           mainFabPosition="absolute";
           mainFabTop="140px";
@@ -55,7 +52,7 @@
       if(this.page==="def-login"){
         //orig width= 400px
         var appGridColumns="2";
-        if(dimensions.base.query640){
+        if(dimensions.base.query767){
           appGridColumns="1";
         };
         this.customStyle["--app-grid-columns"]=appGridColumns;
