--- a/src/behaviors/multi-view-resize-behavior.html
+++ b/src/behaviors/multi-view-resize-behavior.html
@@ -10,21 +10,22 @@
         "screenChange(dimensions.*)"
       ],
       screenChange:function(dimensions){
+        //available queries= <=767, <=1023, <=1365, <=1919
         var appGridColumns="3";
 
-        if(dimensions.base.query640){
+        if(dimensions.base.query767){
 
           appGridColumns="1";
 
-        } else if(dimensions.base.query750){
+        } else if(dimensions.base.query1023){
 
           appGridColumns="1";
 
-        } else if(dimensions.base.query900){
+        } else if(dimensions.base.query1365){
 
           appGridColumns="1";
 
-        } else if(dimensions.base.query1100){
+        } else if(dimensions.base.query1919){
 
           appGridColumns="2";
 
