--- a/src/elements/media-queries/media-queries.html
+++ b/src/elements/media-queries/media-queries.html
@@ -11,29 +11,37 @@
 
   <template>
 
+    <!--
+    dimensions:
+    320
+    768
+    1024
+    1366
+    1920
+    -->
+
+
     <iron-media-query
-      query="(max-width:640px)"
-      query-matches="{{dimensions.query640}}">
+      query="max-width:767px"
+      query-matches="{{dimensions.query767}}">
     </iron-media-query>
 
     <iron-media-query
-      query="max-width:900px"
-      query-matches="{{dimensions.query900}}">
+      query="max-width:1023px"
+      query-matches="{{dimensions.query1023}}">
     </iron-media-query>
 
     <iron-media-query
-      query="max-width:750px"
-      query-matches="{{dimensions.query750}}">
+      query="max-width:1365px"
+      query-matches="{{dimensions.query1365}}">
     </iron-media-query>
 
     <iron-media-query
-      query="max-width:1100px"
-      query-matches="{{dimensions.query1100}}">
+      query="max-width:1919px"
+      query-matches="{{dimensions.query1919}}">
     </iron-media-query>
 
     <style>
-
-
 
     </style>
 
@@ -50,5 +58,5 @@
           value:{}
         }
       }
-    })
+    });
   </script>
