--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -30,7 +30,9 @@
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html" />
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html" />
 <link rel="import" href="../bower_components/paper-button/paper-button.html" />
+<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html" />
+
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
 <link rel="import" href="elements/firebase-storage/firebase-storage.html" />
 
-<link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html" />
+<link rel="import" href="behaviors/shell-resize-behavior.html" />
